--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql:${ENDERECO_BANCO}/lead_collector
+spring.datasource.username=${USUARIO_BANCO}
+spring.datasource.password=${SENHA_BANCO}
+
+spring.jpa.hibernate.ddl-auto=update
 
