--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql:${ENDERECO_BANCO}/lead_collector
+spring.datasource.url=jdbc:mysql:${ENDERECO_BANCO}/guardian_bank
 spring.datasource.username=${USUARIO_BANCO}
 spring.datasource.password=${SENHA_BANCO}
 
