Criar pacote para testes da proposta

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=${SENHA_BANCO}
 
 spring.jpa.hibernate.ddl-auto=update
 
+jwt.segredo=${jwt.segredo}
+jwt.milissegundo=${jwt.milissegundos}
+jwt.autoridad=${jwt.autoridad}
