--- a/src/main/resources/mensagens.properties
+++ b/src/main/resources/mensagens.properties
@@ -1,3 +1,3 @@
-validacao.not-blank=Campo obrigatório
-validacao.not-null=Campo não pode ser nulo
-validacao.positive=Digite um número válido 
+validacao.not-blank=Campo obrigatorio
+validacao.not-null=Campo nao pode ser nulo
+validacao.positive=Digite um numero valido 
