alterar variaveis de ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.username=${USUARIO_BANCO}
 spring.datasource.password=${SENHA_BANCO}
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+
+jwt.segredo=${SEGREDO_JWT}
+jwt.milissegundos=${JWT_TIME}
