--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql:${ENDERECO_BANCO}/guardian_bank
 spring.datasource.username=${USUARIO_BANCO}
 spring.datasource.password=${SENHA_BANCO}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
